--- a/TodoWpf.Tests/packages.config
+++ b/TodoWpf.Tests/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
-  <package id="Elysium.Theme" version="2.0.1" targetFramework="net45" />
+  <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="MvvmLight" version="4.1.27.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.1.27.0" targetFramework="net45" />
-  <package id="Unity" version="3.0.1304.0" targetFramework="net45" />
+  <package id="xunit" version="1.9.1" targetFramework="net45" />
 </packages>
